TestSuite/Verification/Error/Serial/Syntax/Control-Statement/BranchTest.par
BranchTest{

seq main() : Int {
    var Int a = 0
    if a == 0 {
        a = 2
    }
    
    if true {
        a = 3
    } else {
        a = 4
    }
    
    if a == 3 {
        a = 5
    } else if a == 4 {
        a = 6
    } else {
        a = 7
    }
    
return 0 
}}